--- a/d_lawrence_pwl_2.tex
+++ b/d_lawrence_pwl_2.tex
@@ -257,26 +257,34 @@ The relative fit of these models was compared with more complex ones, including 
 \includegraphics[scale=0.8]{ow_class.pdf}
 \includegraphics[scale=0.8]{uw_class.pdf}
 \end{figure}
-In terms of social class selections, the models for both /u/ and /o/ include the \textit{variant} term, confirming that listeners were able to use variation in these vowels as a reliable cue to socioeconomic status and to the \textsc{chav} subcategory. \textsc{rural}selections were reliably affected by variation in /o/, but not /u/. The best models for \textsc{working class} also include interaction terms for listener mobility (/o/) and year of birth (/u/), and the best models for \textsc{chav} include interaction terms for year of birth, indicating th
+Figure x demonstrates how variation in /u/ and /o/ effected listeners' responses in on the social class dimension. The points represent the mean predicted probability of a \textsc{working class} selection, with error bars showing the upper and lower bounds of the Highest Posterior Density interval, estimated through 10000 samples. For /o/, there is a clear effect of diphthongization, with more diphthongal variants reliably cueing the selection of a middle class image, and monophthongal variants cueing the selection of working-class image. The only exception to this pattern is back, diphthongal /o/; the fact that the HPD interval for this variant crosses zero means that we cannot be certain that it had a reliable effect in either direction, but the fact that the interval is biased above the p=.5 line suggests that listeners tended to select working-class images when hearing this variant. Monophthongs all reliably predict the selection of a working-class image, but the strength of this effect weakens for more fronted variants. In summary, we observe a robust effect of diphthongization, with diphthongs predicting middle-class selections, and a smaller effect of fronting whereby more fronted variants cue middle-class selections. Note that this effect holds for both diphthongs and monophthongs, in contrast to what might be predicted based on Haddican et al. (2013). 
+
+In terms of responses to /u/, there is a clear effect of fronting whereby fronter /u/ variants are more likely to cue middle-class selections and back variants are more likely to cue working-class selections. /u/ diphthongization seems to be weakly associated with \textsc{working class}, in that diphthongization weakens the effect of fronting (evident in the shallower slope of fronting across more diphthongal /u/ variants, and in the fact that the HPD interval for fronted, diphthongal /u/ crosses the p=.5 line. These effects are very suprising given the predictions formed earlier, where it was suggested that /u/ fronting would have a limited effect on listeners' social selections than /o/ diphthongization. 
 \subsubsection{\textsc{rural} selections}
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.8]{ow_local.pdf}
 \includegraphics[scale=0.8]{uw_local.pdf}
 \end{figure}
+In terms of selections on the urban-rural dimension, only the model for /o/ was significantly improved by the inclusion of the \textit{variant} term, but predictions from comparable models for both vowels are provided here for comparison. /u/ variants show no reliable effect on listeners' urban/rural selections, while /o/ shows a weak but reliable effect for monophthongal variants. While diphthongs all show no reliable effect (in that the HPD interval crosses p=.5), monophthongs reliably cue the selection of a rural charachter. The fact that only monophthongs show reliable effects suggests that while /o/ monophthongs are associated with rural speech, the converse is not true of diphthongs. Overall, the results are broadly consistent with our earlier predictions -- /u/ shows no evidence of being associated with rural identity, while /o/ monophthongs show a reliable association with this social category.
 \subsubsection{\textsc{chav} selections}
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.8]{ow_chav.pdf}
 \includegraphics[scale=0.8]{uw_chav.pdf}
+A key prediction based on Haddican et al.'s (2013) proposal was that fronted /o/ monophthongs would be associated with the 'Chav' subcategory. Figure x plots predictions for 'Chav' images vs all other, conditional on the variant of /o/ and /u/ heard. It is clear that these results provide no support for this proposal -- rather, they mirror the effects for general  \textsc{working class} selections. While the most back /o/ variants reliably cue \textsc{chav} selections, fronted /o/ shows no reliable effect, and the overall trend is for fronting to \textit{lower} the probablity of a \textsc{chav} selection. Similarly to the \textsc{working class} selections, more back /u/ variants increase the probablity of a \textsc{chav} selection, and this effect is weakly mediated by diphthongization. Once again, these results contrast strongly with the Haddican et al. (2013) proposal -- /u/ shows robust social perception effects where none were predicted, and the effect of fronting appears to run in the opposite direction to what would be expected under the Haddican et al. (2013) account.
 \end{figure}
 \subsection{Results: Listener variation}
+A further prediction made in section x was that listeners would vary in their social perception of variation in /o/ and /u/. In particular, it was predicted that the 'Chav' association between fronted /o/ monophthongs and back /o/ diphthongs would be strongest among younger listeners. While no evidence was found for the predicted relationship between /o/ variation and \textsc{chav}, the data still provide evidence of variation in social perception, demonstrated below.
 \subsubsection{\textsc{working class} selections}
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.8]{ow_class_dim3.pdf}
 \includegraphics[scale=0.8]{uw_class_age.pdf}
 \end{figure}
+Figure x demonstrates variation in social class selections. For /o/, there is a significant effect of listener mobility, with more mobile listeners generally more sensitive to the monophthong-diphthong distinction as a cue to socioeconomic status. The largest variation appears to be in the perception of the most fronted diphthong and most back monophthong -- these variants have a limited effect on the responses of less mobile listeners, suggesting that those listeners hear them as comparatively unmarked. In contrast, more mobile listeners tend to associated these variants with middle-class characters.
+
+/u/ selections show now evidence of variation in terms of mobility, but a significant effect of listener age, shown in figure x. Older listeners are generally less sensitive to fronting as a cue to socioeconomic status.
 \subsubsection{\textsc{chav} selections}
 \begin{figure}[H]
 \centering
